More tests were added

--- a/main.html
+++ b/main.html
@@ -1,4 +1,8 @@
 <body>
-  <div class="block1">Block1</div>
-  <div class="block2">Block2</div>
+  <div class="block1">Fancy</div>
+  <div class="block2">Fancy</div>
+  <div class="block3">Fancy</div>
+  <div class="block4">Fancy</div>
+  <div class="block5">Standard</div>
+  <div class="block6">Standard</div>
 </body>
