One block's behavior description was corrected

--- a/main.html
+++ b/main.html
@@ -4,6 +4,6 @@
   <div class="block3">Fancy</div>
   <div class="block4">Fancy</div>
   <div class="block5">Standard</div>
-  <div class="block6">Standard in FF, fancy in IE/Chrome</div>
+  <div class="block6">Fancy</div>
   <div class="block7">Standard</div>
 </body>
